<resources>
    <string name="app_name">RugbyScore</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="Score">0</string>
    <string name="BtnScoreTry">Try</string>
    <string name="BtnScoreConv">Conversion</string>
    <string name="BtnScorePnlty">Penalty Goal</string>
    <string name="BtnScoreDrpGol">Drop Goal</string>
    <string name="BtnRst">reset</string>
</resources>
