<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.example.android.rugbyscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/LinLayWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewNameOfTeam"
                    android:text="@string/teamA" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/TextViewScore"
                    android:text="@string/Score" />

                <Button
                    style="@style/BtnScoreTry"
                    android:onClick="tryA"
                    android:text="@string/BtnScoreTry"/>

                <Button
                    style="@style/BtnScoreConv"
                    android:onClick="conversionA"
                    android:text="@string/BtnScoreConv" />

                <Button
                    style="@style/BtnScorePnlty"
                    android:onClick="penaltyA"
                    android:text="@string/BtnScorePnlty" />

                <Button
                    style="@style/BtnScoreDrpGol"
                    android:onClick="dropA"
                    android:text="@string/BtnScoreDrpGol" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/ViewWidth"
                android:layout_height="match_parent"
                android:background="@color/ColorView" />

            <LinearLayout
                android:layout_width="@dimen/LinLayWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewNameOfTeam"
                    android:text="@string/teamB"/>

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/TextViewScore"
                    android:text="@string/Score" />

                <Button
                    style="@style/BtnScoreTry"
                    android:onClick="tryB"
                    android:text="@string/BtnScoreTry" />

                <Button
                    style="@style/BtnScoreConv"
                    android:onClick="conversionB"
                    android:text="@string/BtnScoreConv" />

                <Button
                    style="@style/BtnScorePnlty"
                    android:onClick="penaltyB"
                    android:text="@string/BtnScorePnlty" />

                <Button
                    style="@style/BtnScoreDrpGol"
                    android:onClick="dropB"
                    android:text="@string/BtnScoreDrpGol" />
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/BtnRst"
            android:onClick="newgame"
            android:text="@string/BtnRst" />
    </LinearLayout>
</ScrollView>